force-app/main/default/objects/AAO_Candidate__c/AAO_Candidate__c.object-meta.xml
<CustomObject>
    <description>The proposal, and everything that happened to it. One row per proposition considered per pass. Rejected and abstained rows are the decision log.</description>
    <label>AAO Candidate</label>
    <nameField>
        <displayFormat>CAND-{00000000}</displayFormat>
        <label>AAO Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>