force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Account__c.field-meta.xml
<CustomField>
    <fullName>AAO_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: Extraction. Read by: Scoping.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AAO Candidates</relationshipLabel>
    <relationshipName>AAO_Candidates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>