force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Basis__c.field-meta.xml
<CustomField>
    <fullName>AAO_Basis__c</fullName>
    <description>Written by: whoever proposes. Read by: the evidence-family law. Which family of evidence this row rests on, and therefore which shape it must have: Transcript needs a Source and spans, State needs neither and needs cited rows instead, Both needs everything. Ruled 47, 1 Aug 2026. Not required at field level on purpose: candidates written before the field exists must stay updatable, and the law is enforced on insert by AAO_EvidenceFamily rather than by the schema, so that a refusal can explain itself.</description>
    <label>Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>