force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Charter__c.field-meta.xml
<CustomField>
    <fullName>AAO_Charter__c</fullName>
    <description>Written by: Extraction. Read by: The grain abstention analysis groups by.</description>
    <label>Charter</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>