force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Claim__c.field-meta.xml
<CustomField>
    <fullName>AAO_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Written by: Commit. Read by: Which claim this became. Null on every row that did not write.</description>
    <label>Claim</label>
    <referenceTo>AAO_Claim__c</referenceTo>
    <relationshipLabel>AAO Candidates</relationshipLabel>
    <relationshipName>AAO_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>