force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Criterion__c.field-meta.xml
<CustomField>
    <fullName>AAO_Criterion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The criterion this row is about, where the subject type is Decision_Criterion. Addendum 20: THE CRITERIA ANSWER&apos;S SUBJECT IS THE CRITERION, one answer row per criterion, and the person stays on the row as OWNER rather than as key. Before this, a person naming three criteria produced one answer per contract, because the key was subject plus contract and the subject was the person - so two of the three vanished. Points at our own criterion ledger and not at ALTF__Decision_Criteria__c, because the system runs with Altify absent and claims land on our objects before anything is projected.</description>
    <label>Criterion</label>
    <referenceTo>AAO_Criterion__c</referenceTo>
    <relationshipLabel>AAO Criterion Subjects</relationshipLabel>
    <relationshipName>AAO_Criterion_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>