force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Element_Coverage__c.field-meta.xml
<CustomField>
    <fullName>AAO_Element_Coverage__c</fullName>
    <description>JSON. Written by: The blind reader, element by element. Read by: Routes the outcome. Full writes the verdict, partial writes UNVERIFIED with the spans that exist, none writes nothing.</description>
    <label>Element Coverage</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>