force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Evidence_Contract__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Contract__c</fullName>
    <description>Written by: Extraction. Read by: Which question.</description>
    <label>Evidence Contract</label>
    <type>Lookup</type>
    <referenceTo>AAO_Evidence_Contract__c</referenceTo>
    <relationshipName>AAO_Candidates</relationshipName>
    <relationshipLabel>AAO Candidates</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>