force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>AAO_Interpretation__c</fullName>
    <description>Nullable, null is the good case. Written by: Extraction, where the question needed reading beyond its own text. Read by: Handed to the blind reader; carried to Claim. Populated rows counted per question are the under-specified-question list.</description>
    <label>Interpretation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>