force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AAO_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: Extraction. Read by: Scoping; the per-opportunity lease.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AAO Candidates</relationshipLabel>
    <relationshipName>AAO_Candidates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>