force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Outcome__c.field-meta.xml
<CustomField>
<!--
  Not_Returned added 31 July, session 10, ratified.

  A row the model never reported is not an abstained row. It was carrying Outcome =
  Abstained with Abstention_Reason = not_returned, and the field description explained that
  counting abstentions by outcome would overcount. That is documenting a trap rather than
  removing one: the plausible query was the wrong query, and the schema was the thing making
  it wrong. Now the plausible reading is the true one.

  Abstained still means a judgment about evidence: the reader looked and either found
  nothing bearing on the proposition or could not resolve what it found. Not_Returned means
  the reader never answered, which is a fact about the charter.

  Nothing was backfilled, and nothing needed to be: not_returned had never been written to a
  live row when this landed.
-->
    <fullName>AAO_Outcome__c</fullName>
    <description>Written by: Whichever step ended it. Read by: What happened there.</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Span_Failed</fullName>
            </value>
            <value>
                <fullName>Upheld</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Downgraded_Speaker_Rank</fullName>
            </value>
            <value>
                <fullName>Reinforced</fullName>
            </value>
            <value>
                <fullName>Contention_Raised</fullName>
            </value>
            <value>
                <fullName>Superseded_By_Human</fullName>
            </value>
            <value>
                <fullName>Abstained</fullName>
            </value>
            <value>
                <fullName>Not_Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>