force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Participant__c.field-meta.xml
<CustomField>
    <fullName>AAO_Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: the pairs-to-writer join, from the identified pair&apos;s own person. Read by: Commit, which carries it onto both the claim and the answer. The candidate has to be able to express the subject its claim will key on, or the join would have to resolve a Contact before the writer sees the row - which is the resolution outcome standing in for the identity, the thing addendum 18 ruled against.</description>
    <label>Participant</label>
    <referenceTo>AAO_Participant__c</referenceTo>
    <relationshipLabel>AAO Candidates</relationshipLabel>
    <relationshipName>AAO_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>