force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Proposed_Verdict__c.field-meta.xml
<CustomField>
    <fullName>AAO_Proposed_Verdict__c</fullName>
    <description>Written by: Extraction. Read by: What was proposed. Null on abstention.</description>
    <label>Proposed Verdict</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>UNVERIFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>