force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Publication_State__c.field-meta.xml
<CustomField>
    <fullName>AAO_Publication_State__c</fullName>
    <description>Written by: Ratification. Read by: Held candidates stay here and never queue on the mirror. A decline lives here and nowhere else.</description>
    <label>Publication State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>