force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source__c</fullName>
    <description>Written by: Extraction. Read by: Which evidence. Optional since 47 (1 Aug 2026). Which evidence, WHEN THE EVIDENCE IS AN ARTIFACT. A state-derived row has no Source and the evidence-family law in the trigger requires it to be null. Not-required here means the law lives in one place instead of two, and the one place can say why.</description>
    <label>Source</label>
    <type>Lookup</type>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipName>AAO_Candidates</relationshipName>
    <relationshipLabel>AAO Candidates</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>