force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Spans__c.field-meta.xml
<CustomField>
    <fullName>AAO_Spans__c</fullName>
    <description>JSON, up to five spans with source ref, part index, locator. Written by: Extraction. Read by: Span verification; the blind reader.</description>
    <label>Spans</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>