force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Stage__c.field-meta.xml
<CustomField>
    <fullName>AAO_Stage__c</fullName>
    <description>Written by: Each step. Read by: How far it got. Resume-from-survivors reads this.</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Span_Checked</fullName>
            </value>
            <value>
                <fullName>Adjudicated</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>