force-app/main/default/objects/AAO_Candidate__c/fields/AAO_Subject_Contact__c.field-meta.xml
<CustomField>
    <fullName>AAO_Subject_Contact__c</fullName>
    <description>Written by: Extraction. Read by: The subject. Same typed shape as Answer, which forces one row per person on a per-person question.</description>
    <label>Subject Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AAO_Candidate_Subjects</relationshipName>
    <relationshipLabel>AAO Candidate Subjects</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>